manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
              subPath: pihole
            - name: pihole-config
              mountPath: /etc/dnsmasq.d
              subPath: dnsmasq.d
      volumes:
        - name: pihole-config
          persistentVolumeClaim:
            claimName: pihole-config
