manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: web
      port: 8080
      targetPort: 80
